(feature): installed parcel, created files main.scss, _mixins.scss and _variables.scss, changed link in index.html

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
+    "parcel": "^2.8.3",
     "vite": "^4.1.0"
   },
   "dependencies": {
