--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "parcel": "^2.8.3",
+    "typescript": "^4.9.5",
     "vite": "^4.1.0"
   },
   "dependencies": {
