--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "@parcel/transformer-typescript-tsc": "^2.8.3",
@@ -19,8 +15,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "parcel": "^2.8.3",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.0"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "axios": "^1.3.3"
